# av_car_description

./: .pre-commit-config.yaml  Dockerfile  README.md  build.sh  dev.sh  run.sh  runtime.sh
av_car_description/: CHANGELOG.rst  package.xml
av_car_description/launch/: car_description.launch.xml
av_car_description/urdf/: gps.xacro
av_car_description/urdf/mondeo_dca/: mondeo_dca.xacro  mondeo_dca_params.xacro  mondeo_dca_sensors.xacro  mondeo_dca_structure.xacro
av_car_meshes/: CHANGELOG.rst  package.xml
av_lxo_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
av_lxo_description/config/: mirror.param.yaml  simulator_model.config.yaml  simulator_model.param.yaml  vehicle_info.param.yaml
av_lxo_description/launch/: car_description.launch.xml
av_lxo_description/urdf/: imu.xacro  lidar.xacro  radar.xacro  vehicle.xacro
av_lxo_description/urdf/mondeo_dca/: mondeo_dca.xacro  mondeo_dca_params.xacro  mondeo_dca_sensors.xacro  mondeo_dca_structure.xacro  vehicle.xacro
av_lxo_meshes/: CMakeLists.txt  package.xml
car_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
car_description/launch/: car_description.launch.xml
car_description/urdf/: cameras.xacro  gps.xacro  imu.xacro  lidar.xacro  oxts.xacro
car_description/urdf/mondeo_dca/: mondeo_dca.xacro  mondeo_dca_sensors.xacro  mondeo_dca_structure.xacro
car_description/urdf/velodyne/: HDL-32E.urdf.xacro
car_meshes/: CHANGELOG.rst  CMakeLists.txt  package.xml
