<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>av_car_meshes</name>
  <version>1.1.0</version>
  <description>
    The car_meshes package. Most models are custom,
        body_collision.stl was taken from dbw_mkz_description.
  </description>
  <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
  <maintainer email="hcruzgo@ed.ac.uk">Hector Cruz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>av_car_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
